feat: add collection api for plp screen with pagination
